[package]
name = "chinadns"
version = "0.1.0"
authors = ["Hoping White <baihaoping@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
trust-dns-server = "0.19"
log = "0.4"
cfg-if = "0.1"
chrono = "0.4"
libc = "0.2"
lazy_static = "1.4"

[dependencies.async-std]
version = "1.6"
features = ["attributes", "unstable"]

[dependencies.fern]
version = "0.6"
features = ["reopen-03"]

[build-dependencies]
bindgen = "0.55"
cc = "1.0"

